target/generated-sources/antlr4/com/github/enerccio/e8/parser/e8asmParser.java
// Generated from com/github/enerccio/e8/parser/e8asm.g4 by ANTLR 4.3
package com.github.enerccio.e8.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class e8asmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__18=1, T__17=2, T__16=3, T__15=4, T__14=5, T__13=6, T__12=7, T__11=8, 
		T__10=9, T__9=10, T__8=11, T__7=12, T__6=13, T__5=14, T__4=15, T__3=16, 
		T__2=17, T__1=18, T__0=19, IntegerLiteral=20, StringLiteral=21, Identifier=22, 
		WS=23, COMMENT=24, LINE_COMMENT=25;
	public static final String[] tokenNames = {
		"<INVALID>", "'SYSTEM'", "'SECTION'", "':'", "'ADDRESS'", "'['", "';'", 
		"']'", "'ENDMACRO'", "'DDD'", "'$'", "'MACRO'", "'&'", "'('", "'ANYWHERE'", 
		"')'", "'+'", "','", "'-'", "'.'", "IntegerLiteral", "StringLiteral", 
		"Identifier", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final int
		RULE_asmUnit = 0, RULE_definition = 1, RULE_macro = 2, RULE_paramCount = 3, 
		RULE_macroBody = 4, RULE_block = 5, RULE_blockCommands = 6, RULE_blockName = 7, 
		RULE_blockAddress = 8, RULE_addrType = 9, RULE_label = 10, RULE_compoundIdentifier = 11, 
		RULE_assemblerCommand = 12, RULE_assemblerMacroCommand = 13, RULE_constant = 14, 
		RULE_macroConstant = 15, RULE_command = 16, RULE_macroCommand = 17, RULE_macroIdentifier = 18, 
		RULE_macroId = 19, RULE_cmdArgs = 20, RULE_macroCmdArgs = 21, RULE_expr = 22, 
		RULE_macroExpr = 23, RULE_bitPart = 24, RULE_plusExpr = 25, RULE_minusExpr = 26, 
		RULE_primary = 27, RULE_macroPrimary = 28, RULE_memory = 29, RULE_identifiers = 30, 
		RULE_localIdentifier = 31, RULE_integer = 32, RULE_string = 33, RULE_identifier = 34;
	public static final String[] ruleNames = {
		"asmUnit", "definition", "macro", "paramCount", "macroBody", "block", 
		"blockCommands", "blockName", "blockAddress", "addrType", "label", "compoundIdentifier", 
		"assemblerCommand", "assemblerMacroCommand", "constant", "macroConstant", 
		"command", "macroCommand", "macroIdentifier", "macroId", "cmdArgs", "macroCmdArgs", 
		"expr", "macroExpr", "bitPart", "plusExpr", "minusExpr", "primary", "macroPrimary", 
		"memory", "identifiers", "localIdentifier", "integer", "string", "identifier"
	};

	@Override
	public String getGrammarFileName() { return "e8asm.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public e8asmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AsmUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(e8asmParser.EOF, 0); }
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public AsmUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asmUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterAsmUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitAsmUnit(this);
		}
	}

	public final AsmUnitContext asmUnit() throws RecognitionException {
		AsmUnitContext _localctx = new AsmUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_asmUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70); definition();
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__17 || _la==T__8 );
			setState(75); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public MacroContext macro() {
			return getRuleContext(MacroContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitDefinition(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(79);
			switch (_input.LA(1)) {
			case T__17:
				enterOuterAlt(_localctx, 1);
				{
				setState(77); block();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(78); macro();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MacroContext extends ParserRuleContext {
		public MacroBodyContext macroBody() {
			return getRuleContext(MacroBodyContext.class,0);
		}
		public ParamCountContext paramCount() {
			return getRuleContext(ParamCountContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public MacroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterMacro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitMacro(this);
		}
	}

	public final MacroContext macro() throws RecognitionException {
		MacroContext _localctx = new MacroContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_macro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81); match(T__8);
			setState(82); identifier();
			setState(83); paramCount();
			setState(84); macroBody();
			setState(85); match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamCountContext extends ParserRuleContext {
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public ParamCountContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramCount; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterParamCount(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitParamCount(this);
		}
	}

	public final ParamCountContext paramCount() throws RecognitionException {
		ParamCountContext _localctx = new ParamCountContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_paramCount);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); integer();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MacroBodyContext extends ParserRuleContext {
		public AssemblerMacroCommandContext assemblerMacroCommand(int i) {
			return getRuleContext(AssemblerMacroCommandContext.class,i);
		}
		public List<AssemblerMacroCommandContext> assemblerMacroCommand() {
			return getRuleContexts(AssemblerMacroCommandContext.class);
		}
		public MacroBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macroBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterMacroBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitMacroBody(this);
		}
	}

	public final MacroBodyContext macroBody() throws RecognitionException {
		MacroBodyContext _localctx = new MacroBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_macroBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__7) | (1L << Identifier))) != 0)) {
				{
				{
				setState(89); assemblerMacroCommand();
				setState(90); match(T__13);
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<BlockCommandsContext> blockCommands() {
			return getRuleContexts(BlockCommandsContext.class);
		}
		public BlockNameContext blockName() {
			return getRuleContext(BlockNameContext.class,0);
		}
		public BlockCommandsContext blockCommands(int i) {
			return getRuleContext(BlockCommandsContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); blockName();
			setState(99); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(98); blockCommands();
				}
				}
				setState(101); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__0) | (1L << Identifier))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockCommandsContext extends ParserRuleContext {
		public AssemblerCommandContext assemblerCommand() {
			return getRuleContext(AssemblerCommandContext.class,0);
		}
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public BlockCommandsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockCommands; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterBlockCommands(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitBlockCommands(this);
		}
	}

	public final BlockCommandsContext blockCommands() throws RecognitionException {
		BlockCommandsContext _localctx = new BlockCommandsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_blockCommands);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(104);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(103); label();
				}
				break;
			}
			setState(106); assemblerCommand();
			setState(107); match(T__13);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockNameContext extends ParserRuleContext {
		public BlockAddressContext blockAddress() {
			return getRuleContext(BlockAddressContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public BlockNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterBlockName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitBlockName(this);
		}
	}

	public final BlockNameContext blockName() throws RecognitionException {
		BlockNameContext _localctx = new BlockNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_blockName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); match(T__17);
			setState(110); identifier();
			setState(112);
			_la = _input.LA(1);
			if (_la==T__15) {
				{
				setState(111); blockAddress();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockAddressContext extends ParserRuleContext {
		public AddrTypeContext addrType() {
			return getRuleContext(AddrTypeContext.class,0);
		}
		public BlockAddressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockAddress; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterBlockAddress(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitBlockAddress(this);
		}
	}

	public final BlockAddressContext blockAddress() throws RecognitionException {
		BlockAddressContext _localctx = new BlockAddressContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_blockAddress);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(114); match(T__15);
			setState(115); addrType();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddrTypeContext extends ParserRuleContext {
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public AddrTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addrType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterAddrType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitAddrType(this);
		}
	}

	public final AddrTypeContext addrType() throws RecognitionException {
		AddrTypeContext _localctx = new AddrTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_addrType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			switch (_input.LA(1)) {
			case IntegerLiteral:
				{
				setState(117); integer();
				}
				break;
			case T__5:
				{
				setState(118); match(T__5);
				}
				break;
			case T__18:
				{
				setState(119); match(T__18);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelContext extends ParserRuleContext {
		public CompoundIdentifierContext compoundIdentifier() {
			return getRuleContext(CompoundIdentifierContext.class,0);
		}
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitLabel(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_label);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); compoundIdentifier();
			setState(123); match(T__16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompoundIdentifierContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public CompoundIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compoundIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterCompoundIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitCompoundIdentifier(this);
		}
	}

	public final CompoundIdentifierContext compoundIdentifier() throws RecognitionException {
		CompoundIdentifierContext _localctx = new CompoundIdentifierContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_compoundIdentifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(125); match(T__0);
				}
			}

			setState(128); identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssemblerCommandContext extends ParserRuleContext {
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public AssemblerCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assemblerCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterAssemblerCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitAssemblerCommand(this);
		}
	}

	public final AssemblerCommandContext assemblerCommand() throws RecognitionException {
		AssemblerCommandContext _localctx = new AssemblerCommandContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_assemblerCommand);
		try {
			setState(132);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(130); constant();
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(131); command();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssemblerMacroCommandContext extends ParserRuleContext {
		public MacroConstantContext macroConstant() {
			return getRuleContext(MacroConstantContext.class,0);
		}
		public MacroCommandContext macroCommand() {
			return getRuleContext(MacroCommandContext.class,0);
		}
		public AssemblerMacroCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assemblerMacroCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterAssemblerMacroCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitAssemblerMacroCommand(this);
		}
	}

	public final AssemblerMacroCommandContext assemblerMacroCommand() throws RecognitionException {
		AssemblerMacroCommandContext _localctx = new AssemblerMacroCommandContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_assemblerMacroCommand);
		try {
			setState(136);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(134); macroConstant();
				}
				break;
			case T__7:
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(135); macroCommand();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitConstant(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_constant);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138); match(T__10);
			setState(139); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MacroConstantContext extends ParserRuleContext {
		public MacroExprContext macroExpr() {
			return getRuleContext(MacroExprContext.class,0);
		}
		public MacroConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macroConstant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterMacroConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitMacroConstant(this);
		}
	}

	public final MacroConstantContext macroConstant() throws RecognitionException {
		MacroConstantContext _localctx = new MacroConstantContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_macroConstant);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141); match(T__10);
			setState(142); macroExpr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public CmdArgsContext cmdArgs() {
			return getRuleContext(CmdArgsContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof e8asmListener ) ((e8asmListener)listener).exitCommand(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_command);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144); identifier();
			setState(146);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__6) | (1L << IntegerLiteral) | (1L << StringLiteral))) != 0)) {
				{
				setState(145); cmdArgs();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
